--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
   <modules>
     <module>user-service</module>
     <module>art-service</module>
+    <module>auth-decoder</module>
   </modules>
 
   <name>art-hub-services</name>
@@ -48,7 +49,7 @@
   </dependencies>
 
   <build>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+    <pluginManagement>
       <plugins>
         <plugin>
           <groupId>org.springframework.boot</groupId>
