Implement resource owner password grant flow for authentication and authorization

--- a/user-service/src/main/resources/db/changelog-master.yaml
+++ b/user-service/src/main/resources/db/changelog-master.yaml
@@ -3,5 +3,5 @@ databaseChangeLog:
       file: changelog/v1-init-db.sql
       relativeToChangelogFile: true
   - include:
-      file: changelog/add-user-roles.sql
+      file: changelog/v1-init-data.sql
       relativeToChangelogFile: true
