--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,8 @@
   <modules>
     <module>user-service</module>
     <module>art-service</module>
-    <module>auth-decoder</module>
+    <module>auth-service</module>
+    <module>amqp</module>
   </modules>
 
   <name>art-hub-services</name>
@@ -21,8 +22,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
-    <spring.boot.maven.plugin.version>2.5.7</spring.boot.maven.plugin.version>
-    <spring.boot.dependencies.version>2.5.7</spring.boot.dependencies.version>
+    <spring.boot.maven.plugin.version>3.0.2</spring.boot.maven.plugin.version>
+    <spring.boot.dependencies.version>3.0.2</spring.boot.dependencies.version>
   </properties>
 
   <dependencyManagement>
