--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -71,5 +71,9 @@
             <artifactId>amqp</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
     </dependencies>
 </project>
